force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ExternalStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExternalStatus__c</fullName>
    <description>Status of the request that will be visible to an External User</description>
    <label>External Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Revision</fullName>
            </value>
            <value>
                <fullName>Submitted for Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Pending LOA Signature</fullName>
            </value>
            <value>
                <fullName>Pending Fulfillment</fullName>
            </value>
            <value>
                <fullName>Request Fulfilled</fullName>
            </value>
            <value>
                <fullName>Closeout Required</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Additional Information Requested</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Concluded</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Pending Financial Reconciliation</fullName>
            </value>
            <value>
                <fullName>Financial Reconciliation In Review</fullName>
            </value>
            <value>
                <fullName>Pending Outcome Reconciliation</fullName>
            </value>
            <value>
                <fullName>Outcome Reconciliation In Review</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Concept Accepted/Full Proposal Requested</fullName>
            </value>
            <value>
                <fullName>Pending Study Update</fullName>
            </value>
            <value>
                <fullName>Final Study Submitted For Review</fullName>
            </value>
            <value>
                <fullName>Final Study Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>