force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ExternalUserAllowed__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExternalUserAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, meeting is available for registration by Guest User on Meetings HCP Portal</description>
    <inlineHelpText>When checked, meeting is available for registration by Guest User on Meetings HCP Portal</inlineHelpText>
    <label>External User Allowed</label>
    <type>Checkbox</type>
</CustomField>