force-app/main/default/objects/OCE__Meeting__c/fields/OCE__FBServedBy__c.field-meta.xml
<CustomField>
    <fullName>OCE__FBServedBy__c</fullName>
    <description>Food &amp; Beverage Served by</description>
    <inlineHelpText>Food &amp; Beverage Served by</inlineHelpText>
    <label>F&amp;B Served by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Caterer</fullName>
            </value>
            <value>
                <fullName>Not Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>