force-app/main/default/objects/OCE__Meeting__c/fields/OCE__FinalParticipants__c.field-meta.xml
<CustomField>
    <fullName>OCE__FinalParticipants__c</fullName>
    <description>Number of all Meeting Members who attended the Meeting (Attendance Status = Attended-eSigned, Attended-QR Code, Attended-Paper Signed, Attended-Did Not Sign).</description>
    <inlineHelpText>Number of all Meeting Members who attended the Meeting (Attendance Status = Attended-eSigned, Attended-Paper Signed, Attended-Did Not Sign).</inlineHelpText>
    <label>Final Participants</label>
    <summaryFilterItems>
        <field>OCE__MeetingMember__c.OCE__AttendanceStatus__c</field>
        <operation>equals</operation>
        <value>Attended-eSigned, Attended-Paper Signed, Attended-Did Not Sign, Attended-QR Code</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingMember__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>