force-app/main/default/objects/OCE__Meeting__c/fields/OCE__FinancialReconcileSummary__c.field-meta.xml
<CustomField>
    <fullName>OCE__FinancialReconcileSummary__c</fullName>
    <description>Enables User to leave the Financial reconcile summary</description>
    <inlineHelpText>Enables User to leave the Financial reconcile summary</inlineHelpText>
    <label>Financial Reconcile Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>