force-app/main/default/objects/OCE__Meeting__c/fields/OCE__FormattedHostingEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__FormattedHostingEndDateTime__c</fullName>
    <description>End Date/Time in an international format (by default uses `EEE, d MMM yyyy HH:mm zzz` mask).</description>
    <inlineHelpText>End Date/Time in an international format (by default uses `EEE, d MMM yyyy HH:mm zzz` mask).</inlineHelpText>
    <label>Formatted End Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>