force-app/main/default/objects/OCE__Meeting__c/fields/OCE__FormattedHostingStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__FormattedHostingStartDateTime__c</fullName>
    <description>Start Date/Time in an international format (by default uses `EEE, d MMM yyyy HH:mm zzz` mask).</description>
    <inlineHelpText>Start Date/Time in an international format (by default uses `EEE, d MMM yyyy HH:mm zzz` mask).</inlineHelpText>
    <label>Formatted Start Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>