force-app/main/default/objects/OCE__Meeting__c/fields/OCE__FundsAlignedToLOA__c.field-meta.xml
<CustomField>
    <fullName>OCE__FundsAlignedToLOA__c</fullName>
    <description>The purpose of this field is to confirm that the funds for the purposes outlined in the letter of the agreement are used.</description>
    <inlineHelpText>The purpose of this field is to confirm that the funds for the purposes outlined in the letter of the agreement are used.</inlineHelpText>
    <label>Funds Aligned to LOA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>