force-app/main/default/objects/OCE__Meeting__c/fields/OCE__GeographicReachOfRequest__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeographicReachOfRequest__c</fullName>
    <description>The geographic reach of the activity</description>
    <inlineHelpText>The geographic reach of the activity</inlineHelpText>
    <label>Geographic Reach of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__GeographicReach</valueSetName>
    </valueSet>
</CustomField>