force-app/main/default/objects/OCE__Meeting__c/fields/OCE__HasAdditionalSupporters__c.field-meta.xml
<CustomField>
    <fullName>OCE__HasAdditionalSupporters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there are additional external supporters for this request, either financially, in-kind or service-based</description>
    <label>Has Additional Supporters?</label>
    <type>Checkbox</type>
</CustomField>