force-app/main/default/objects/OCE__Meeting__c/fields/OCE__HostingBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>OCE__HostingBusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal entity within the company responsible for hosting the engagement</description>
    <label>Hosting Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__Party__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__Party__c</referenceTo>
    <relationshipLabel>Meetings (Hosting Business Unit)</relationshipLabel>
    <relationshipName>HostedMeetings</relationshipName>
    <type>Lookup</type>
</CustomField>