force-app/main/default/objects/OCE__Meeting__c/fields/OCE__HostingCountry__c.field-meta.xml
<CustomField>
    <fullName>OCE__HostingCountry__c</fullName>
    <description>Hosting Country for the Meeting</description>
    <label>Hosting Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>