force-app/main/default/objects/OCE__Meeting__c/fields/OCE__HostingEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__HostingEndDateTime__c</fullName>
    <description>Hosting End Date/Time</description>
    <formula>IF(NOT(ISBLANK(OCE__FormattedHostingEndDateTime__c)), OCE__FormattedHostingEndDateTime__c, IF(ISPICKVAL(OCE__HostingTimeZone__c, &quot;&quot;),
            &quot;&quot;,
            LEFT(TEXT(OCE__EndDateTime__c + VALUE(LEFT(TEXT(OCE__HostingTimeZone__c), FIND(&apos;(GMT&apos;, TEXT(OCE__HostingTimeZone__c)) - 1)) / 1440), 11) +
            IF(MOD((HOUR(TIMEVALUE(OCE__EndDateTime__c + VALUE(LEFT(TEXT(OCE__HostingTimeZone__c), FIND(&apos;(GMT&apos;, TEXT(OCE__HostingTimeZone__c)) - 1)) / 1440)) + 11), 12) + 1 &lt;= 9, &quot;0&quot;, &quot;&quot;) + TEXT(MOD((HOUR(TIMEVALUE(OCE__EndDateTime__c + VALUE(LEFT(TEXT(OCE__HostingTimeZone__c), FIND(&apos;(GMT&apos;, TEXT(OCE__HostingTimeZone__c)) - 1)) / 1440)) + 11), 12) + 1) +
            MID(TEXT(OCE__EndDateTime__c + VALUE(LEFT(TEXT(OCE__HostingTimeZone__c), FIND(&apos;(GMT&apos;, TEXT(OCE__HostingTimeZone__c)) - 1)) / 1440), 14, 3) + &quot; &quot; +
            IF(HOUR(TIMEVALUE(OCE__EndDateTime__c + VALUE(LEFT(TEXT(OCE__HostingTimeZone__c), FIND(&apos;(GMT&apos;, TEXT(OCE__HostingTimeZone__c)) - 1)) / 1440)) &lt; 12, &quot;AM&quot;, &quot;PM&quot;) + &quot; &quot; +
            RIGHT(TEXT(OCE__HostingTimeZone__c), LEN(TEXT(OCE__HostingTimeZone__c)) - FIND(&quot;*&quot;, TEXT(OCE__HostingTimeZone__c)))
            ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hosting End Date/Time</label>
    <type>Text</type>
</CustomField>