force-app/main/default/objects/OCE__Meeting__c/fields/OCE__HostingRegionTimezone__c.field-meta.xml
<CustomField>
    <fullName>OCE__HostingRegionTimezone__c</fullName>
    <description>The region-based timezone ID in IANA format (e.g. America/Chicago, America/Los_Angeles).</description>
    <inlineHelpText>The region-based timezone ID in IANA format (e.g. America/Chicago, America/Los_Angeles).</inlineHelpText>
    <label>Hosting Region Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCE__HostingCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OCE__TimeZones</valueSetName>
    </valueSet>
</CustomField>