force-app/main/default/objects/OCE__Meeting__c/fields/OCE__HostingTimeZone__c.field-meta.xml
<CustomField>
    <fullName>OCE__HostingTimeZone__c</fullName>
    <description>Hosting Time Zone</description>
    <label>Hosting Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCE__HostingCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+840(GMT+14:00) Line Is. Time (Pacific/Kiritimati)*LINT</fullName>
                <label>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</label>
            </value>
            <value>
                <fullName>+825(GMT+13:45) Chatham Daylight Time (Pacific/Chatham)*CDT</fullName>
                <label>(GMT+13:45) Chatham Daylight Time (Pacific/Chatham)</label>
            </value>
            <value>
                <fullName>+780(GMT+13:00) New Zealand Daylight Time (Pacific/Auckland)*NZDT</fullName>
                <label>(GMT+13:00) New Zealand Daylight Time (Pacific/Auckland)</label>
            </value>
            <value>
                <fullName>+780(GMT+13:00) Phoenix Is.Time (Pacific/Enderbury)*PHOT</fullName>
                <label>(GMT+13:00) Phoenix Is.Time (Pacific/Enderbury)</label>
            </value>
            <value>
                <fullName>+780(GMT+13:00) Fiji Summer Time (Pacific/Fiji)*FJT</fullName>
                <label>(GMT+13:00) Fiji Summer Time (Pacific/Fiji)</label>
            </value>
            <value>
                <fullName>+780(GMT+13:00) Tonga Time (Pacific/Tongatapu)*TOT</fullName>
                <label>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</label>
            </value>
            <value>
                <fullName>+765(GMT+12:45) Chatham Standard Time (Pacific/Chatham)*CHAST</fullName>
                <label>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</label>
            </value>
            <value>
                <fullName>+720(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)*NZST</fullName>
                <label>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</label>
            </value>
            <value>
                <fullName>+720(GMT+12:00) Fiji Time (Pacific/Fiji)*FJT</fullName>
                <label>(GMT+12:00) Fiji Time (Pacific/Fiji)</label>
            </value>
            <value>
                <fullName>+720(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)*PETT</fullName>
                <label>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</label>
            </value>
            <value>
                <fullName>+720(GMT+12:00) Norfolk Daylight Time (Pacific/Norfolk)*NFDT</fullName>
                <label>(GMT+11:30) Norfolk Daylight Time (Pacific/Norfolk)</label>
            </value>
            <value>
                <fullName>+660(GMT+11:00) Pacific/Norfolk*NFT</fullName>
                <label>(GMT+11:00) Pacific/Norfolk</label>
            </value>
            <value>
                <fullName>+660(GMT+11:00) Lord Howe Standard Time (Australia/Lord_Howe)*LHDT</fullName>
                <label>(GMT+11:00) Lord Howe Standard Time (Australia/Lord_Howe)</label>
            </value>
            <value>
                <fullName>+660(GMT+11:00) Australian Eastern Daylight Time (Australia/Sydney)*AEDT</fullName>
                <label>(GMT+11:00) Australian Eastern Daylight Time (Australia/Sydney)</label>
            </value>
            <value>
                <fullName>+660(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)*SBT</fullName>
                <label>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</label>
            </value>
            <value>
                <fullName>+630(GMT+10:30) Australian Central Standard Time ((South Australia) Australia/Adelaide)*ACDT</fullName>
                <label>(GMT+10:30) Australian Central Standard Time ((South Australia) Australia/Adelaide)</label>
            </value>
            <value>
                <fullName>+600(GMT+10:00) Australian Eastern StandardTime (New South Wales) (Australia/Sydney)*AEST</fullName>
                <label>(GMT+10:00) Australian Eastern StandardTime (New South Wales) (Australia/Sydney)</label>
            </value>
            <value>
                <fullName>+600(GMT+10:00) Australian Eastern Standard Time (Queensland) (Australia/Brisbane)*AEST</fullName>
                <label>(GMT+10:00) Australian Eastern Standard Time (Queensland) (Australia/Brisbane)</label>
            </value>
            <value>
                <fullName>+570(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)*ACST</fullName>
                <label>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</label>
            </value>
            <value>
                <fullName>+540(GMT+09:00) Korea Standard Time (Asia/Seoul)*KST</fullName>
                <label>(GMT+09:00) Korea Standard Time (Asia/Seoul)</label>
            </value>
            <value>
                <fullName>+540(GMT+09:00) Japan Standard Time (Asia/Tokyo)*JST</fullName>
                <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)*HKT</fullName>
                <label>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)*MYT</fullName>
                <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) Philippines Time (Asia/Manila)*PHT</fullName>
                <label>(GMT+08:00) Philippines Time (Asia/Manila)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) China Standard Time (Asia/Shanghai)*CST</fullName>
                <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) Singapore Time (Asia/Singapore)*SGT</fullName>
                <label>(GMT+08:00) Singapore Time (Asia/Singapore)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) Taipei Standard Time (Asia/Taipei)*TST</fullName>
                <label>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) China Standard Time (Asia/Taipei)*CST</fullName>
                <label>(GMT+08:00) China Standard Time (Asia/Taipei)</label>
            </value>
            <value>
                <fullName>+480(GMT+08:00) Australian Western Standard Time (Australia/Perth)*AWST</fullName>
                <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
            </value>
            <value>
                <fullName>+420(GMT+07:00) Indochina Time (Asia/Bangkok)*ICT</fullName>
                <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>