force-app/main/default/objects/OCE__Meeting__c/fields/OCE__IsAccredited__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsAccredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the event is accredited</description>
    <label>Is Accredited?</label>
    <type>Checkbox</type>
</CustomField>