force-app/main/default/objects/OCE__Meeting__c/fields/OCE__IsCompanyAccreditorForThisProgram__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsCompanyAccreditorForThisProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the System shows the &apos;I certify...&apos; and the Accreditation Certificate(s) to the User, also controls if System should select the value &apos;Accreditor&apos; in the Partner Organization Types</description>
    <label>Is your company the accreditor?</label>
    <type>Checkbox</type>
</CustomField>