force-app/main/default/objects/OCE__Meeting__c/fields/OCE__IsGoingToWorkWith3rdParty__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsGoingToWorkWith3rdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the requestor will work with the third party (parties)</description>
    <inlineHelpText>Defines whether the requestor will work with the third party (parties)</inlineHelpText>
    <label>Will you be working with a 3rd party?</label>
    <type>Checkbox</type>
</CustomField>