force-app/main/default/objects/OCE__Meeting__c/fields/OCE__LastQualificationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LastQualificationDate__c</fullName>
    <description>The date this meeting was last processed for qualification</description>
    <inlineHelpText>The date this meeting was last processed for qualification</inlineHelpText>
    <label>Last Qualification Date</label>
    <type>DateTime</type>
</CustomField>