force-app/main/default/objects/OCE__Meeting__c/fields/OCE__LearningObjectives__c.field-meta.xml
<CustomField>
    <fullName>OCE__LearningObjectives__c</fullName>
    <description>Description of the learner-oriented objectives and outcomes</description>
    <label>Learning Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>