force-app/main/default/objects/OCE__Meeting__c/fields/OCE__LickertScaleUsed__c.field-meta.xml
<CustomField>
    <fullName>OCE__LickertScaleUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Lickert Scale is used to measure satisfaction.</description>
    <inlineHelpText>Indicates whether the Lickert Scale is used to measure satisfaction.</inlineHelpText>
    <label>&quot;Lickert Scale&quot; Used?</label>
    <type>Checkbox</type>
</CustomField>