force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Location__c.field-meta.xml
<CustomField>
    <fullName>OCE__Location__c</fullName>
    <description>The location of type HCO or Venue where this meeting is taking place.</description>
    <inlineHelpText>The location of type HCO or Venue where this meeting is taking place.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>