force-app/main/default/objects/OCE__Meeting__c/fields/OCE__LocationType__c.field-meta.xml
<CustomField>
    <fullName>OCE__LocationType__c</fullName>
    <description>The location type of the Meeting.</description>
    <inlineHelpText>The location type of the Meeting.</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>In-Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>