force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Main_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>OCE__Main_Contact_Name__c</fullName>
    <description>The main contact name on the Meeting.</description>
    <inlineHelpText>The main contact name on the Meeting.</inlineHelpText>
    <label>Main Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>