force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MaxAllowedSponsees__c.field-meta.xml
<CustomField>
    <fullName>OCE__MaxAllowedSponsees__c</fullName>
    <description>Maximum number of HCPs this engagement will be sponsoring to the event based on the allocated expense budget</description>
    <inlineHelpText>Maximum number of HCPs this engagement will be sponsoring to the event based on the allocated expense budget</inlineHelpText>
    <label>Max Allowed Sponsees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>