force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MaxSatellites__c.field-meta.xml
<CustomField>
    <fullName>OCE__MaxSatellites__c</fullName>
    <description>The maximum number of allowed satellites that can register for the Meeting.</description>
    <label>Max Satellites</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>