force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MeetingID__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingID__c</fullName>
    <description>Format (abbr Meeting Type - Year - AutoNum e.g. SM-2018-12345)</description>
    <formula>CASE( RecordType.DeveloperName , &apos;Displays_Exhibits&apos;, &apos;DE&apos;, &apos;HCP_Sponsorship&apos;, &apos;HP&apos;,&apos;Rep_Presentation&apos;,&apos;OP&apos;,&apos;Speaker_Meeting&apos;, &apos;SM&apos;,&apos;MT&apos;)
            &amp;
            &apos;-&apos;
            &amp;
            TEXT(YEAR((DATEVALUE( OCE__StartDateTime__c )) ))
            &amp;
            &apos;-&apos;
            &amp;
            LEFT(TEXT(

            SQRT(

            (VALUE(

            (LEFT(RIGHT(TEXT( CreatedDate ),3),2))&amp;

            TEXT(DAY(DATEVALUE(CreatedDate)))&amp;

            TEXT(MONTH(DATEVALUE(CreatedDate)))&amp;

            TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;

            (LEFT(RIGHT(text(CreatedDate),6),2)))

            )*10

            )

            )

            ,6
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting ID</label>
    <type>Text</type>
</CustomField>