force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MeetingNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingNumber__c</fullName>
    <description>Meeting unique number</description>
    <inlineHelpText>Meeting unique number</inlineHelpText>
    <label>Meeting Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>