force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MeetingService__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Service/Benefit this engagement originated from</description>
    <inlineHelpText>Reference to the Service/Benefit this engagement originated from</inlineHelpText>
    <label>Meeting Service</label>
    <referenceTo>OCE__MeetingService__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>