force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MeetingStructure__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingStructure__c</fullName>
    <description>The structure of the Meeting: Standalone, Host, or Satellite.</description>
    <inlineHelpText>The structure of the Meeting: Standalone, Host, or Satellite.</inlineHelpText>
    <label>Meeting Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
                <default>true</default>
                <label>Standalone</label>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>