force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MembersAllocatedToActualExpense__c.field-meta.xml
<CustomField>
    <fullName>OCE__MembersAllocatedToActualExpense__c</fullName>
    <description>DEPRECATED. Number of Meeting Members which have been allocated to Actual Expense</description>
    <inlineHelpText>Number of Meeting Members which have been allocated to Actual Expense</inlineHelpText>
    <label>DEPRECATEDMembers alloc. to act. expense</label>
    <summaryFilterItems>
        <field>OCE__MeetingMember__c.OCE__IsAllocatedToActualExpense__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingMember__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>