force-app/main/default/objects/OCE__Meeting__c/fields/OCE__MembersAllocatedToEstimateExpense__c.field-meta.xml
<CustomField>
    <fullName>OCE__MembersAllocatedToEstimateExpense__c</fullName>
    <description>DEPRECATED. Number of Meeting Members which have been allocated to Estimate Expense</description>
    <inlineHelpText>Number of Meeting Members which have been allocated to Estimate Expense</inlineHelpText>
    <label>DEPRECATEDMemb. alloc. to estim. expense</label>
    <summaryFilterItems>
        <field>OCE__MeetingMember__c.OCE__IsAllocatedToEstimateExpense__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingMember__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>