force-app/main/default/objects/OCE__Meeting__c/fields/OCE__NeedsAssessmentSummary__c.field-meta.xml
<CustomField>
    <fullName>OCE__NeedsAssessmentSummary__c</fullName>
    <description>Brief description of the need for the request</description>
    <label>Needs Assessment Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>