force-app/main/default/objects/OCE__Meeting__c/fields/OCE__NoOfAttendees__c.field-meta.xml
<CustomField>
    <fullName>OCE__NoOfAttendees__c</fullName>
    <description>Sum of all Meeting Members.</description>
    <inlineHelpText>Sum of all Meeting Members.</inlineHelpText>
    <label>No. of Attendees</label>
    <summaryForeignKey>OCE__MeetingMember__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>