force-app/main/default/objects/OCE__Meeting__c/fields/OCE__NoOfOrganizer__c.field-meta.xml
<CustomField>
    <fullName>OCE__NoOfOrganizer__c</fullName>
    <description>The number of organizers on the Meeting.</description>
    <inlineHelpText>The number of organizers on the Meeting.</inlineHelpText>
    <label>No. of Organizer</label>
    <summaryFilterItems>
        <field>OCE__MeetingMember__c.OCE__Type__c</field>
        <operation>equals</operation>
        <value>Organizer</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingMember__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>