force-app/main/default/objects/OCE__Meeting__c/fields/OCE__NoOfSpeakers__c.field-meta.xml
<CustomField>
    <fullName>OCE__NoOfSpeakers__c</fullName>
    <description>The number of speakers on the Meeting.</description>
    <inlineHelpText>The number of speakers on the Meeting.</inlineHelpText>
    <label>No. of Speakers</label>
    <summaryFilterItems>
        <field>OCE__MeetingMember__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Speaker</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingMember__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>