force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Objectives__c.field-meta.xml
<CustomField>
    <fullName>OCE__Objectives__c</fullName>
    <description>The objectives of the Meeting.</description>
    <label>Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>